Add some basic logic