@@ -8,6 +8,8 @@ import org.jetbrains.annotations.NotNull;
 
 import java.util.ArrayList;
 import java.util.Collections;
+import java.util.List;
+import java.util.UUID;
 import java.util.concurrent.CompletableFuture;
 
 class CupServiceImpl implements CupService {
@@ -15,17 +17,22 @@ class CupServiceImpl implements CupService {
     private final CupProvider cupProvider;
 
     CupServiceImpl(@NotNull JavaPlugin plugin) {
-        this.cupProvider = new CupProvider(GsonUtil.GSON, plugin.getDataPath(), ArrayList::new);
+        this.cupProvider = new CupProvider(GsonUtil.GSON, plugin.getDataPath(), () -> List.of(new FileCupDTO("default", "default", List.of(new UUID(
+                -4276615277451065986L,
+                -5133830059633988266L
+        )))));
     }
 
     @Override
     public CompletableFuture<CupDTO> getRandomCup() {
         return CompletableFuture.supplyAsync(() -> {
             var cups = this.cupProvider.getCupsAsList();
-            var newCups = new ArrayList<FileCupDTO>();
-            Collections.copy(cups, newCups);
+            var newCups = new ArrayList<>(cups);
             Collections.shuffle(newCups);
-            return newCups.get(0);
+            if (newCups.isEmpty()) {
+                throw new IllegalStateException("There are no cups available");
+            }
+            return newCups.getFirst();
         });
     }
 
